# mrs_uav_px4_api

./: CMakeLists.txt  package.xml  plugins.xml
config/: mavros_plugins.yaml  mavros_px4_config.jinja.yaml  mavros_px4_config.yaml  mavros_px4_config_old_fw.yaml  px4_api.yaml
launch/: api.launch  api.py  mavros.launch  mavros_gazebo_simulation.launch  mavros_gazebo_simulation.launch.py  mavros_gazebo_simulation.py  mavros_realworld.py
src/: api.cpp
tmux/mrs_one_drone/: goto.sh  session.yml
tmux/mrs_one_drone/custom_configs/: platform_config.yaml
